--- a/1.html
+++ b/1.html
@@ -8,5 +8,6 @@
   <hl><h1>정답입니다. 답:1<br>디폴트:채무불이행.</h1></h1>
 
   <h1>다음 QR코드 장소는 본관 1층 왼쪽 계단에 있습니다.(교무실 문쪽)</h1>
+  <img src="j.jpg" width="70%" height="80%" title="j">
 </body>
 </html>
